# zertz

./: .autotools  .cproject  .gitignore  .project  AUTHORS  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  configure.in
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  board.c  board.h  gnet.c  gnet.h  main.c  main.h  marble.c  marble.h  move.c  move.h  net_to_move.c  net_to_move.h  play.c  play.h  player.h  prefs.c  prefs.h  rand_ai.c  rand_ai.h  recording.c  recording.h  simple_ai.c  simple_ai.h  zertz_net.c  zertz_net.h
test/: Makefile.am  Makefile.in  check_board.c
