INCLUDES = $(ZERTZ_CFLAGS) 

bin_PROGRAMS = zertz

zertz_SOURCES = \
	board.c \
	board.h \
	main.c \
	main.h \
	marble.c \
	marble.h \
	move.c \
	move.h \
	net_to_move.c \
	net_to_move.h \
	play.c \
	play.h \
	player.h \
	prefs.c \
	prefs.h \
	rand_ai.c \
	rand_ai.h \
	recording.c \
	recording.h \
	simple_ai.c \
	simple_ai.h \
	gnet.c \
	gnet.h \
	zertz_net.c \
	zertz_net.h 
	
LDADD = $(ZERTZ_LIBS)
